fix z-index bug on screenshot button

--- a/style.css
+++ b/style.css
@@ -313,7 +313,6 @@ a {
 
 .work-saver-button {
   position: absolute;
-  z-index: -2;
 }
 
 /* Responsive section/Media Query section */
